<resources>
    <string name="app_name">WakeUp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Wake Up!</string>
    <string name="nav_header_subtitle">not logged in</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_website">Website</string>
    <string name="menu_settings">Settings</string>
    <string name="app_redirect_scheme">http</string>
    <string name="menu_login">login</string>
    <!-- Preference Titles -->
    <string name="server_settings">Server</string>
    <string name="alarm_settings">Alarm</string>

    <!-- Messages Preferences -->
    <string name="wakeup_server_url_title">Wake Up! server URL</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="wakeup_alarm_sound">wakeup_alarm_sound</string>
    <string name="wakeup_server_url">wakeup_server_url</string>
    <string name="default_wakeup_server_url">https://wakeup.3po.ch</string>
</resources>